<resources>
    <string name="app_name">FishLabs</string>
    <string name="title_home"> </string>
    <string name="title_scan"> </string>
    <string name="title_savelist"> </string>
    <string name="desc_banner">Welcome To Fishlabs</string>
    <string name="desc_banner2">You can find any fish you might be looking for.</string>
    <string name="Fish_category">Fish Category </string>
    <string name="text_category1">Seawater Fish </string>
    <string name="text_category2">Freshwater Fish </string>
    <string name="desc_category1">There are many types of marine fish here.</string>
    <string name="desc_category2">There are many types of freshwater fish here. </string>
    <string name="search">Find your fish... </string>
    <string name="seawater_list">Fish \nName </string>
    <string name="data_tidak_ditemukan">Data Tidak Ditemukan </string>
    <string name="nama_ikan">Nama ikan </string>
    <string name="head_desc"> Deskripsi </string>
    <string name="deskripsi"> test test test test test test test test test test test test test test test test test test test test test  </string>
    <string name="habitat"> habitat </string>
    <string name="textbutton"> Add to Your List </string>

    <string name="capturimage" translatable="false">capturImage</string>
    <string name="switchcamera">SwitchCamera</string>
    <string name="scan"> Scan </string>
    <string name="upload"> Identification </string>
    <string name="empty_image_warning"> empety </string>



</resources>